JT-2320 - added spacing for anchor down issue.

--- a/app/assets/stylesheets/school_profiles/_school_profile.scss
+++ b/app/assets/stylesheets/school_profiles/_school_profile.scss
@@ -2,12 +2,14 @@
   .content > div {
     margin-top: 30px;
   }
+
   .nearby-schools {
     position: relative;
     margin: auto;
     padding: 30px 15px;
     max-width: 1170px;
   }
+
   .source-link {
     text-align: center;
     padding-top: 5px;
@@ -15,4 +17,13 @@
       text-align: left;
     }
   }
+  @include media-breakpoint-down(xs) {
+    .anchor-mobile-offset {
+      display: block;
+      height: 50px; /*same height as header*/
+      margin-top: -50px; /*same height as header*/
+      visibility: hidden;
+    }
+  }
 }
+
